[CHANGE]: add padding to the page-container to avoid overlaping title and navbar in cell-phone size

--- a/game.css
+++ b/game.css
@@ -57,6 +57,7 @@ nav ul li a:hover {
 .page-container {
     display: flex;
     flex-direction: column;
+    padding: 20px 0;
     justify-content: center;
     align-items: center;
     height: 100vh;
